crates/xberg-ffi/include/xberg.h

typedef uint64_t XBERGAlefHandle;
uint32_t xberg_captioning_config_default_min_image_area(void);
uintptr_t xberg_chunk_classification_config_default_batch_size(void);
uintptr_t xberg_chunk_classification_config_default_max_concurrency(void);
XBERGAlefHandle xberg_chunking_config_default(void);
XBERGAlefHandle xberg_content_filter_config_default(void);
XBERGAlefHandle xberg_diff_options_default(void);
XBERGAlefHandle xberg_doctor_check_pass(const char *name, const char *message);
XBERGAlefHandle xberg_doctor_check_warn(const char *name, const char *message);
XBERGAlefHandle xberg_doctor_check_fail(const char *name, const char *message);
XBERGAlefHandle xberg_doctor_check_skip(const char *name, const char *message);
int32_t xberg_doctor_report_is_ok(XBERGAlefHandle this_);
void xberg_document_structure_finalize_node_types(XBERGAlefHandle this_);
int32_t xberg_document_structure_is_empty(XBERGAlefHandle this_);
XBERGAlefHandle xberg_document_structure_default(void);
XBERGAlefHandle xberg_embedding_config_default(void);
XBERGAlefHandle xberg_extract_input_default(void);
XBERGAlefHandle xberg_extract_input_from_bytes(const uint8_t *bytes,
                                               uintptr_t bytes_len,
                                               const char *mime_type,
                                               const char *filename);
XBERGAlefHandle xberg_extract_input_from_uri(const char *uri);
uintptr_t xberg_extraction_config_default_archive_depth(void);
uint64_t xberg_extraction_config_default_max_embedded_file_bytes(void);
int32_t
xberg_extraction_config_default_max_embedded_file_bytes_has_result(void);
uint64_t xberg_extraction_config_default_extraction_timeout(void);
void xberg_svg_options_free(XBERGAlefHandle handle);
char *xberg_tesseract_config_to_json(XBERGAlefHandle handle);
void xberg_tesseract_config_free(XBERGAlefHandle handle);
char *xberg_token_reduction_config_to_json(XBERGAlefHandle handle);
void xberg_token_reduction_config_free(XBERGAlefHandle handle);
char *xberg_token_reduction_options_to_json(XBERGAlefHandle handle);
void xberg_token_reduction_options_free(XBERGAlefHandle handle);
char *xberg_transcription_config_to_json(XBERGAlefHandle handle);
void xberg_transcription_config_free(XBERGAlefHandle handle);
char *xberg_tree_sitter_config_to_json(XBERGAlefHandle handle);
void xberg_tree_sitter_config_free(XBERGAlefHandle handle);
char *xberg_tree_sitter_process_config_to_json(XBERGAlefHandle handle);
void xberg_tree_sitter_process_config_free(XBERGAlefHandle handle);
char *xberg_url_extraction_config_to_json(XBERGAlefHandle handle);
char *xberg_yake_params_to_json(XBERGAlefHandle handle);
void xberg_yake_params_free(XBERGAlefHandle handle);
XBERGAlefHandle xberg_classify_chunks_owned(XBERGAlefHandle result,
                                            XBERGAlefHandle config);
XBERGAlefHandle xberg_doctor(XBERGAlefHandle config);
XBERGAlefHandle xberg_extract(XBERGAlefHandle input, XBERGAlefHandle config);
XBERGAlefHandle xberg_extract_batch(const char *inputs, XBERGAlefHandle config);
char *xberg_find_unmarked_claims(const char *markdown);
char *xberg_list_document_extractors(void);
char *xberg_list_embedding_backends(void);
char *xberg_list_ocr_backends(void);
char *xberg_list_post_processors(void);
char *xberg_list_renderers(void);
char *xberg_list_reranker_backends(void);
char *xberg_list_supported_formats(void);
char *xberg_list_tokenizer_backends(void);
char *xberg_list_validators(void);
XBERGAlefHandle xberg_map_url(const char *uri, XBERGAlefHandle config);
char *xberg_max_sim_rank(XBERGAlefHandle query, const char *docs);
double xberg_max_sim_score(XBERGAlefHandle query, XBERGAlefHandle doc);
int32_t xberg_verify_excerpt(const char *excerpt, const char *source_text);