packages/csharp/src/Xberg/NativeMethods.cs


  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_svg_options_free")]
  internal static extern void SvgOptionsFree(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_tesseract_config_to_json")]
  internal static extern IntPtr TesseractConfigToJson(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_tesseract_config_free")]
  internal static extern void TesseractConfigFree(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_token_reduction_config_to_json")]
  internal static extern IntPtr TokenReductionConfigToJson(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_token_reduction_config_free")]
  internal static extern void TokenReductionConfigFree(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_token_reduction_options_to_json")]
  internal static extern IntPtr TokenReductionOptionsToJson(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_token_reduction_options_free")]
  internal static extern void TokenReductionOptionsFree(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_transcription_config_to_json")]
  internal static extern IntPtr TranscriptionConfigToJson(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_transcription_config_free")]
  internal static extern void TranscriptionConfigFree(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_tree_sitter_config_to_json")]
  internal static extern IntPtr TreeSitterConfigToJson(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_tree_sitter_config_free")]
  internal static extern void TreeSitterConfigFree(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_tree_sitter_process_config_to_json")]
  internal static extern IntPtr TreeSitterProcessConfigToJson(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_tree_sitter_process_config_free")]
  internal static extern void TreeSitterProcessConfigFree(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_url_extraction_config_to_json")]
  internal static extern IntPtr UrlExtractionConfigToJson(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_yake_params_to_json")]
  internal static extern IntPtr YakeParamsToJson(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_yake_params_free")]
  internal static extern void YakeParamsFree(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_classify_chunks_owned")]
  internal static extern ulong ClassifyChunksOwned(ulong result, ulong config);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_doctor")]
  internal static extern ulong Doctor(ulong config);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_extract")]
  internal static extern ulong Extract(ulong input, ulong config);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_extract_batch")]
  internal static extern ulong ExtractBatch(IntPtr inputs, ulong config);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_find_unmarked_claims")]
  internal static extern IntPtr
  FindUnmarkedClaims([MarshalAs(UnmanagedType.LPUTF8Str)] string markdown);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_list_document_extractors")]
  internal static extern IntPtr ListDocumentExtractors();

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_list_embedding_backends")]
  internal static extern IntPtr ListEmbeddingBackends();

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_list_ocr_backends")]
  internal static extern IntPtr ListOcrBackends();

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_list_post_processors")]
  internal static extern IntPtr ListPostProcessors();

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_list_renderers")]
  internal static extern IntPtr ListRenderers();

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_list_reranker_backends")]
  internal static extern IntPtr ListRerankerBackends();

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_list_supported_formats")]
  internal static extern IntPtr ListSupportedFormats();

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_list_tokenizer_backends")]
  internal static extern IntPtr ListTokenizerBackends();

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_list_validators")]
  internal static extern IntPtr ListValidators();

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_map_url")]
  internal static extern ulong
  MapUrl([MarshalAs(UnmanagedType.LPUTF8Str)] string uri, ulong config);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_max_sim_rank")]
  internal static extern IntPtr MaxSimRank(ulong query, IntPtr docs);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_max_sim_score")]
  internal static extern double MaxSimScore(ulong query, ulong doc);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_verify_excerpt")]
  internal static extern int
  VerifyExcerpt([MarshalAs(UnmanagedType.LPUTF8Str)] string excerpt,
                [MarshalAs(UnmanagedType.LPUTF8Str)] string sourceText);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_captioning_config_default_min_image_area")]
  internal static extern uint CaptioningConfigDefaultMinImageArea();

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint =
                 "xberg_chunk_classification_config_default_batch_size")]
  internal static extern ulong ChunkClassificationConfigDefaultBatchSize();

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint =
                 "xberg_chunk_classification_config_default_max_concurrency")]
  internal static extern ulong ChunkClassificationConfigDefaultMaxConcurrency();

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_chunking_config_default")]
  internal static extern ulong ChunkingConfigDefault();

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_content_filter_config_default")]
  internal static extern ulong ContentFilterConfigDefault();

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_diff_options_default")]
  internal static extern ulong DiffOptionsDefault();

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_doctor_check_pass")]
  internal static extern ulong
  DoctorCheckPass([MarshalAs(UnmanagedType.LPUTF8Str)] string name,
                  [MarshalAs(UnmanagedType.LPUTF8Str)] string message);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_doctor_check_warn")]
  internal static extern ulong
  DoctorCheckWarn([MarshalAs(UnmanagedType.LPUTF8Str)] string name,
                  [MarshalAs(UnmanagedType.LPUTF8Str)] string message);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_doctor_check_fail")]
  internal static extern ulong
  DoctorCheckFail([MarshalAs(UnmanagedType.LPUTF8Str)] string name,
                  [MarshalAs(UnmanagedType.LPUTF8Str)] string message);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_doctor_check_skip")]
  internal static extern ulong
  DoctorCheckSkip([MarshalAs(UnmanagedType.LPUTF8Str)] string name,
                  [MarshalAs(UnmanagedType.LPUTF8Str)] string message);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_doctor_report_is_ok")]
  internal static extern int DoctorReportIsOk(ulong handle);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_document_structure_finalize_node_types")]
  internal static extern void DocumentStructureFinalizeNodeTypes(ulong handle);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_document_structure_is_empty")]
  internal static extern int DocumentStructureIsEmpty(ulong handle);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_document_structure_default")]
  internal static extern ulong DocumentStructureDefault();

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_embedding_config_default")]
  internal static extern ulong EmbeddingConfigDefault();

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_extract_input_default")]
  internal static extern ulong ExtractInputDefault();

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_extract_input_from_bytes")]
  internal static extern ulong
  ExtractInputFromBytes(IntPtr bytes, UIntPtr bytesLen,
                        [MarshalAs(UnmanagedType.LPUTF8Str)] string mimeType,
                        [MarshalAs(UnmanagedType.LPUTF8Str)] string filename);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_extract_input_from_uri")]
  internal static extern ulong
  ExtractInputFromUri([MarshalAs(UnmanagedType.LPUTF8Str)] string uri);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_extraction_config_default_archive_depth")]
  internal static extern ulong ExtractionConfigDefaultArchiveDepth();

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint =
                 "xberg_extraction_config_default_max_embedded_file_bytes")]
  internal static extern ulong ExtractionConfigDefaultMaxEmbeddedFileBytes();

  [DllImport(
      LibName, CallingConvention = CallingConvention.Cdecl,
      EntryPoint =
          "xberg_extraction_config_default_max_embedded_file_bytes_has_result")]
  internal static extern int
  ExtractionConfigDefaultMaxEmbeddedFileBytesHasResult();

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_extraction_config_default_extraction_timeout")]
  internal static extern ulong ExtractionConfigDefaultExtractionTimeout();
